; ModuleID = '/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_service.c_wait_for_work_threads_exit.c'
source_filename = "/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_service.c_wait_for_work_threads_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_tracker_thread_count = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wait_for_work_threads_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_for_work_threads_exit() #0 {
  br label %1

1:                                                ; preds = %4, %0
  %2 = load i64, i64* @g_tracker_thread_count, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %1
  %5 = call i32 @sleep(i32 1)
  br label %1

6:                                                ; preds = %1
  ret void
}

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
